--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#FF7500">
@@ -12,37 +12,36 @@
     <!-- or include the full Algolia theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/algolia-min.css" integrity="sha256-HB49n/BZjuqiCtQQf49OdZn63XuKFaxcIHWf0HNKte8=" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-    <title>ZenPub</title>
-</head>
+    <title>ZenPub 1</title>
+  </head>
 
-<body>
+  <body>
     <noscript>
-       
-        <p><em>Please enable JavaScript or try another browser to run this app.</em></p>
+      <p><em>Please enable JavaScript or try another browser to run this app.</em></p>
     </noscript>
     <div id="root"></div>
     <div id="modal"></div>
     <script type="text/javascript">
-        const locale = localStorage.getItem("locale") || 'en_GB';
-        const [language] = locale.split('_');
+      const locale = localStorage.getItem("locale") || 'en_GB';
+      const [language] = locale.split('_');
 
-        window.doorbellOptions = {
-          "id": "10690",
-          "appKey": "ObfmzIS8cairiG2UI0CnQEPDhYMWme7cHvbo8TJgBWTiducnxAtaKfFmN6lwOWN2",
-          "language": language,
-        };
+      window.doorbellOptions = {
+        "id": "10690",
+        "appKey": "ObfmzIS8cairiG2UI0CnQEPDhYMWme7cHvbo8TJgBWTiducnxAtaKfFmN6lwOWN2",
+        "language": language,
+      };
 
-        const dir = language === 'ar' ? 'rtl' : 'ltr';
+      const dir = language === 'ar' ? 'rtl' : 'ltr';
 
-        const htmlEl = document.querySelector('html');
-        htmlEl.style.direction = dir;
-        htmlEl.classList.remove('--rtl', '--ltr');
-        htmlEl.classList.add('--' + dir);
+      const htmlEl = document.querySelector('html');
+      htmlEl.style.direction = dir;
+      htmlEl.classList.remove('--rtl', '--ltr');
+      htmlEl.classList.add('--' + dir);
     </script>
-</body>
-    <script type="text/javascript">
-        window.addEventListener('load', function() {
-            Sentry.init({ dsn: 'https://cee9deb57dce41a9963b0cb234076db6@sentry.io/1825990' });
-        })
-</script>
+  </body>
+  <script type="text/javascript">
+    window.addEventListener('load', function() {
+      Sentry.init({ dsn: 'https://cee9deb57dce41a9963b0cb234076db6@sentry.io/1825990' });
+    })
+  </script>
 </html>
