Change Sentry DSN

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
   </body>
   <script type="text/javascript">
     window.addEventListener('load', function() {
-      Sentry.init({ dsn: 'https://cee9deb57dce41a9963b0cb234076db6@sentry.io/1825990' });
+      Sentry.init({ dsn: 'https://a2c6737d369743ee87622b3bec4458f7@o373800.ingest.sentry.io/5444849' });
     })
   </script>
 </html>
