--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <!-- or include the full Algolia theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/algolia-min.css" integrity="sha256-HB49n/BZjuqiCtQQf49OdZn63XuKFaxcIHWf0HNKte8=" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,600,700" rel="stylesheet">
     <title>Reflow OS</title>
   </head>
 
