Storybook: remove font sizes hardcoding

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,9 +1,8 @@
 <title>Components library</title>
 <style>
  body {
-     font-family: 'Open Sans', 'Fira Sans', 'Helvetica', 'Arial', sans-serif;
+     font-family: 'Barlow', 'Open Sans', 'Helvetica', 'Arial', sans-serif;
      font-weight: 400;
-     font-size: 14px;
      line-height: 1.4;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
@@ -18,7 +17,6 @@
 
 
  #story, #props, #modules {
-     font-size: 20px;
      font-weight: 700;
  }
 
@@ -27,12 +25,8 @@
      text-align: left;
      color: #000;
  }
- .sbdocs-p {
-     font-size: 16px !important;
- }
  .sbdocs-preview  {
      background-color: rgb(245, 246, 247) !important;
-
  }
 
  .sb-show-main {
