--- a/public/index.html
+++ b/public/index.html
@@ -81,5 +81,5 @@
   <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/44/14/common.js"></script>
   <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/44/14/util.js"></script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlbsdiikbCINjPLwD7NNwtsA8-vTcrr0g&libraries=places"></script>
 </html>
