add location field

--- a/public/index.html
+++ b/public/index.html
@@ -78,8 +78,5 @@
       Sentry.init({ dsn: 'https://a2c6737d369743ee87622b3bec4458f7@o373800.ingest.sentry.io/5444849' });
     })
   </script>
-  <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/44/14/common.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="https://maps.googleapis.com/maps-api-v3/api/js/44/14/util.js"></script>
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlbsdiikbCINjPLwD7NNwtsA8-vTcrr0g&libraries=places"></script>
+  <script type = "text / javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlbsdiikbCINjPLwD7NNwtsA8-vTcrr0g&libraries=places"></script>
 </html>
